data/src/main/java/com/example/data/network/error/NoTokenException.kt
package com.example.data.network.error

class NoTokenException: RuntimeException()